Fixed project clipping at the bottom by reducing the VH of the container

--- a/styles.css
+++ b/styles.css
@@ -238,7 +238,7 @@ a {
 }
 
 .projects {
-    height: 80vh;
+    height: 70vh;
     width: 75%;
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
